fixed overflow

--- a/frontend/src/app/shared/components/viewer/viewer.component.css
+++ b/frontend/src/app/shared/components/viewer/viewer.component.css
@@ -1,5 +1,4 @@
 .viewer-container {
-  position: relative;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -14,14 +13,10 @@
   height: 100%;
   background-color: #fff;
   border-radius: 16px;
-  overflow-y: scroll;
-  padding-top: 65px;
 }
 
 .header {
-  position: fixed;
-  top: 135px;
-  width: 40%;
+  width: 100%;
   height: 75px;
   background-color: var(--primary);
   color: #ffffff7a;
@@ -40,6 +35,8 @@
 }
 
 .content {
+  height: 100%;
   padding: 10px;
   word-break: break-word;
+  overflow-y: scroll;
 }
